--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,12 @@ spring.thymeleaf.cache=false
 spring.datasource.generate-unique-name=false
 spring.datasource.name=tacocloud
 
+
+
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
